stylesheet/styles.css
/* RESETS */
/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
ul,
li,
input,
button {
  margin: 0;
  padding: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role="list"],
ol[role="list"] {
  list-style: none;
}

/* Set core root defaults */
html {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea {
  font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* GLOBAL VARIABLES */
:root {
  /* Font  */
  font-family: "Mulish", sans-serif;

  /* Font sizes */
  --fs-16: 1rem;
  --fs-18: 1.125rem;
  --fs-20: 1.25rem;
  --fs-32: 2rem;
  --fs-40: 2.5rem;

  /* Font weight */
  --fw-400: 400;
  --fw-600: 600;
  --fw-700: 700;
  --fw-800: 800;
  --fw-900: 900;

  /* Colours */
  --clr-black: #130302;
  --clr-white: #eae3d9;
  --clr-pale: #6d615e;
  --clr-dark: #311e1b;
  --clr-background: rgba(217, 217, 217, .4);

  /* Modular Scales */
  --ratio: 1.61803398875;
  --s-5: calc(var(--s-4) / var(--ratio));
  --s-4: calc(var(--s-3) / var(--ratio));
  --s-3: calc(var(--s-2) / var(--ratio));
  --s-2: calc(var(--s-1) / var(--ratio));
  --s-1: calc(var(--s0) / var(--ratio));
  --s0: 1.125rem;
  --s1: calc(var(--s0) * var(--ratio));
  --s2: calc(var(--s1) * var(--ratio));
  --s3: calc(var(--s2) * var(--ratio));
  --s4: calc(var(--s3) * var(--ratio));
  --s5: calc(var(--s4) * var(--ratio));

  /* Width */
  --measure: 65ch;
  --space: 1rem;
}

/* ELEMENT STYLING */
h1,
h2,
h3 {
  font-weight: var(--fw-800);
}

h4 {
  font-weight: var(--fw-900);
}

/* Font sizes */
h1 {
  font-size: var(--fs-40);
}

h2 {
  font-size: var(--fs-32);
}

h3 {
  font-size: var(--fs-20);
}

h4 {
  font-size: var(--fs-18);
}

p {
  color: var(--clr-pale);
  line-height: 1.75rem;
}

p.text-dark {
  margin-block-start: .75rem;
}

article p {
  max-width: 65ch;
}

a {
  display: inline-block;
  text-decoration: none;
  font-weight: var(--fw-600);
  color: var(--clr-black);
  padding: var(--s1);
}

header a {
  padding: .5rem;
}

main a,
a:hover,
a:active {
  color: var(--clr-white);
  background-color: var(--clr-black);
}

ul {
  list-style: none;
}

h1 {
  font-size: var(--fs-40);
  font-weight: var(--fw-700);
}

p,
button {
  font-size: var(--fs-18);
}

article {
  max-width: 65ch;
}

em {
  color: var(--clr-black);
}

section:target {
  scroll-padding-top: var(--s2);
}

/* UTILITY CLASSES */
.container {
  padding-inline-start: var(--s0);
  padding-inline-end: var(--s0);
  max-width: 80rem;
  margin-inline-start: auto;
  margin-inline-end: auto;
}

.minWidth60 {
  min-width: 60%;
}

.text-dark {
  color: var(--clr-dark);
}

.split {
  display: flex;
  gap: var(--s0);
  justify-content: space-between;
  align-items: center;
}

.cluster {
  display: flex;
  flex-wrap: wrap;
  gap: var(--s1);
  justify-content: flex-start;
  align-items: center;
}

.center {
  box-sizing: content-box;
  margin-inline-start: auto;
  margin-inline-end: auto;
  max-width: var(--measure);
}

.stack {
  --space: var(--s3);
}

.stack>* {
  margin-block-start: 0;
  margin-block-end: 0;
}

.stack>*+* {
  margin-block-start: var(--space);
}

.box {
  padding: var(--s2);
  border: 0 solid;
  outline: var(--border-thin) solid transparent;
  outline-offset: calc(var(--border-thin) * -1);
  --color-dark: #fff;
  --color-dark: #000;
  color: var(--color-dark);
  background-color: var(--color-dark);
}

.switcher {
  display: flex;
  flex-wrap: wrap;
  gap: var(--s3);
  align-items: center;
}

.switcher>* {
  flex-grow: 1;
  flex-basis: calc((var(--measure) - 100%) * 999);
}

.switcher> :nth-last-child(n + 4),
.switcher> :nth-last-child(n + 4)~* {
  flex-basis: 100%;
}

.reel {
  display: flex;
  height: auto;
  overflow-x: auto;
  overflow-y: hidden;
  scrollbar-color: #fff #000;
}

.reel::-webkit-scrollbar {
  height: 1rem;
}

.reel::-webkit-scrollbar-track {
  background-color: #000;
}

.reel::-webkit-scrollbar-thumb {
  background-color: #000;
  background-image: linear-gradient(#000 0, #000 0.25rem, #fff 0.25rem, #fff 0.75rem, #000 0.75rem);
}

.reel>* {
  flex: 0 0 auto;
}


.reel>img {
  height: 100%;
  flex-basis: auto;
  width: auto;
}

.reel>*+* {
  margin-left: 1rem;
}

.reel.overflowing {
  padding-bottom: 1rem;
}

.corner-square {
  position: relative;
}

.corner-square-topright::before {
  content: "";
  display: block;
  width: 20rem;
  height: 12rem;
  background-image: url(../img/Grainy-Background-Black\ Grain.png);
  position: absolute;
  right: -1.5rem;
  top: -1.5rem;
  z-index: -1;
}

.corner-square-bottomleft::before {
  content: "";
  display: block;
  width: 10rem;
  height: 10rem;
  background-image: url(../img/Grainy-Background-Black\ Grain.png);
  position: absolute;
  left: -1.5rem;
  bottom: -1.5rem;
  z-index: -1;
}

.corner-square-topleft::before {
  content: "";
  display: block;
  width: 37ch;
  height: 82%;
  background-image: url(../img/Grainy-Background-Grey\ Grain.png);
  position: absolute;
  left: -2rem;
  top: -2rem;
  z-index: -1;
}



/* SECTIONAL STYLING */
header {
  padding-block-start: 1rem;
}

main>*+* {
  --space: var(--s4);
  margin-block-start: var(--space);
}

article>*+* {
  --space: var(--s1);
  margin-block-start: var(--space);
}

main>section>*+* {
  --space: var(--s1);
  margin-block-start: var(--space);
}

#mentors {
  background-image: url(../img/Globe-View-Background.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: top center;
  object-fit: cover;
  padding-block-start: 10rem;
}

#features article {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: center;
  gap: var(--s1);
}

#perspective article {
  background-color: var(--clr-background);
  /* max-width: 45ch; */
}

#testimonial p {
  font-size: var(--fs-16);
}

#testimonial>article {
  max-width: 35ch;
}

#features *+* {
  margin-block-start: 0;
}


#newsletter h2 {
  font-weight: var(--fw-700);
}

form {
  display: flex;
  padding: .55rem;
  background-color: var(--clr-background);
  justify-content: space-between;
  align-items: center;
}

input[type=email] {
  all: unset;
}

input[type=submit] {
  all: unset;
  display: inline-block;
  font-weight: var(--fw-600);
  color: var(--clr-black);
  padding: var(--s-1);
  background-color: var(--clr-black);
  color: var(--clr-white);
}

footer {
  padding-inline-start: var(--s1);
  padding-inline-end: var(--s1);
}

footer {
  padding-block-start: var(--s1);
  color: var(--clr-white);
  background-color: var(--clr-black);
}

footer a {
  color: var(--clr-white);
}

footer p {
  color: var(--clr-white);
  background-color: var(--clr-black);
}

#bottom-nav {
  place-items: flex-start;
}

#bottom-nav>*+* {
  margin-block-start: 0;
}

#bottom-nav a {
  all: unset;
  display: inline-block;
  text-decoration: none;
  white-space: nowrap;
  font-weight: var(--fw-400);
  padding-block-end: var(--s0);
}

#contact {
  justify-content: space-between;
}

